- change to Stark theme to get rotator to align correctly

--- a/RockWeb/Themes/Stark/Styles/theme.less
+++ b/RockWeb/Themes/Stark/Styles/theme.less
@@ -138,7 +138,7 @@ footer {
 // Small devices (tablets, 768px and up)
 @media (min-width: @screen-sm-min) {
     #announcement-rotator {
-        margin: @spacing-lg-px;
+        margin: @spacing-lg-px 0;
     }
 }
 
